--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
 }
 
 .sect-one {
-    margin-top: 85%;
+    margin-top: 300px;
     padding-inline: 10px;
     background-color: #ffffff;
 }
